// Copyright (c) 2020 Temporal Technologies, Inc.
//
// Permission is hereby granted, free of charge, to any person obtaining a copy
// of this software and associated documentation files (the "Software"), to deal
// in the Software without restriction, including without limitation the rights
// to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
// copies of the Software, and to permit persons to whom the Software is
// furnished to do so, subject to the following conditions:
//
// The above copyright notice and this permission notice shall be included in
// all copies or substantial portions of the Software.
//
// THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
// IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
// FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
// AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
// LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
// OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
// THE SOFTWARE.

syntax = "proto3";

package token;

option go_package = "github.com/temporalio/temporal/.gen/proto/token";

import "common/common.proto";
import "common/decision.proto";
import "replication/replication.proto";

message HistoryContinuation {
    string RunId = 1;
    int64 FirstEventId = 2;
    int64 NextEventId = 3;
    bool IsWorkflowRunning = 5;
    bytes PersistenceToken = 6;
    common.TransientDecisionInfo TransientDecision = 7;
    bytes BranchToken = 8;
    map<string,replication.ReplicationInfo> ReplicationInfo = 9;
}

message RawHistoryContinuation{
    string DomainName = 1;
    string WorkflowId = 2;
    string RunId = 3;
    int64 StartEventId = 4;
    int64 StartEventVersion = 5;
    int64 EndEventId = 6;
    int64 EndEventVersion = 7;
    bytes PersistenceToken = 8;
    common.VersionHistories VersionHistories = 9;
}

message Task {
    bytes DomainId = 1;
    string WorkflowId  = 2;
    bytes RunId = 3;
    int64 ScheduleId = 4;
    int64 ScheduleAttempt = 5;
    string ActivityId = 6;
    string WorkflowType = 7;
    string ActivityType = 8;
}

message QueryTask {
    string DomainId = 1;
    string TaskList = 2;
    string TaskId = 3;
}
